[project]
name = "longhurst-province-finder"
version = "0.1.0"
description = "Library to match latitude/longitude coordinates to their Longhurst Province"
readme = "README.md"
requires-python = ">=3.12"
licence = "MIT"
dependencies = []

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
]

[[project.authors]]
name = "Sara Collins"

[[project.authors]]
name = "Peter Hirsch"
email = "peter.hirsch@mdc-berlin.de"

[project.urls]
homepage = "https://github.com/Kainmueller-Lab/Longhurst-Province-Finder"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.targets.sdist]
sources = ["src"]
