[project]
name = "longhurst-province-finder"
version = "0.1.0"
description = "Library to match latitude/longitude coordinates to their Longhurst Province"
readme = "README.md"
requires-python = ">=3.12"
licence = "MIT"
dependencies = ["matplotlib>=3.10.3", "shapely>=2.1.1"]

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
]

[[project.authors]]
name = "Sara Collins"

[[project.authors]]
name = "Peter Hirsch"
email = "peter.hirsch@mdc-berlin.de"

[project.urls]
homepage = "https://github.com/Kainmueller-Lab/Longhurst-Province-Finder"

[project.optional-dependencies]
ci = ["pytest>=8.3.5"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.build.targets.sdist]
sources = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
